--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
         "start": "ng serve --port 3000",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
-        "test": "ng test"
+        "test": "ng test",
+        "deploy": "ng build --base-href https://vkaswin.github.io/google-jamboard/ && npx angular-cli-ghpages --dir=dist/google-jamboard"
     },
     "private": true,
     "dependencies": {
@@ -27,6 +28,7 @@
         "@angular/cli": "~15.2.2",
         "@angular/compiler-cli": "^15.2.0",
         "@types/jasmine": "~4.3.0",
+        "angular-cli-ghpages": "^1.0.5",
         "jasmine-core": "~4.5.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.1.0",
