--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.1",
+        "@types/multer": "^1.4.7",
         "@types/node": "^18.13.0",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
@@ -26,6 +27,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.9.1",
+        "multer": "^1.4.5-lts.1",
         "zod": "^3.20.6"
     }
 }
