--- a/client/package.json
+++ b/client/package.json
@@ -1,40 +1,28 @@
 {
     "name": "google-jamboard",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve --port 3000",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development",
-        "test": "ng test",
-        "deploy": "ng build --base-href https://vkaswin.github.io/google-jamboard/ && npx angular-cli-ghpages --dir=dist/google-jamboard"
-    },
+    "homepage": "https://vkaswin.github.io/google-jamboard",
     "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "start": "vite --port 3000",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
+    },
     "dependencies": {
-        "@angular/animations": "^15.2.0",
-        "@angular/common": "^15.2.0",
-        "@angular/compiler": "^15.2.0",
-        "@angular/core": "^15.2.0",
-        "@angular/forms": "^15.2.0",
-        "@angular/platform-browser": "^15.2.0",
-        "@angular/platform-browser-dynamic": "^15.2.0",
-        "@angular/router": "^15.2.0",
-        "rxjs": "~7.8.0",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.12.0"
+        "gh-pages": "^5.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "sass": "^1.59.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^15.2.2",
-        "@angular/cli": "~15.2.2",
-        "@angular/compiler-cli": "^15.2.0",
-        "@types/jasmine": "~4.3.0",
-        "angular-cli-ghpages": "^1.0.5",
-        "jasmine-core": "~4.5.0",
-        "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.2.0",
-        "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "~2.0.0",
-        "typescript": "~4.9.4"
+        "@types/node": "^18.15.3",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@vitejs/plugin-react": "^3.1.0",
+        "typescript": "^4.9.3",
+        "vite": "^4.2.0"
     }
 }
