--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,9 +16,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": ["node"],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+    },
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
