--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "axios": "^1.3.4",
         "gh-pages": "^5.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.9.0",
         "sass": "^1.59.3"
     },
     "devDependencies": {
