--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "dependencies": {
         "axios": "^1.3.4",
         "gh-pages": "^5.0.0",
+        "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.43.6",
         "react-router-dom": "^6.9.0",
         "sass": "^1.59.3"
     },
