--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,16 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.6",
+        "react-popper": "^2.3.0",
         "react-router-dom": "^6.9.0",
+        "react-transition-group": "^4.4.5",
         "sass": "^1.59.3"
     },
     "devDependencies": {
         "@types/node": "^18.15.3",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "@types/react-transition-group": "^4.4.5",
         "@vitejs/plugin-react": "^3.1.0",
         "typescript": "^4.9.3",
         "vite": "^4.2.0"
