--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "react-hook-form": "^7.43.6",
         "react-popper": "^2.3.0",
         "react-router-dom": "^6.9.0",
+        "react-toastify": "^9.1.2",
         "react-transition-group": "^4.4.5",
         "sass": "^1.59.3"
     },
