--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
         "axios": "^1.3.4",
         "gh-pages": "^5.0.0",
         "jwt-decode": "^3.1.2",
+        "moment-timezone": "^0.5.43",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.8",
+        "react-paginate": "^8.1.5",
         "react-popper": "^2.3.0",
         "react-router-dom": "^6.9.0",
         "react-toastify": "^9.1.2",
