--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
         "react-router-dom": "^6.9.0",
         "react-toastify": "^9.1.2",
         "react-transition-group": "^4.4.5",
-        "sass": "^1.59.3"
+        "sass": "^1.59.3",
+        "swiper": "^9.2.0"
     },
     "devDependencies": {
         "@types/node": "^18.15.3",
